# bluedragon

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/: FUNDING.yml
docs/: CMakeLists.txt  Doxyfile.in
engine/: CMakeLists.txt
engine/headers/: BDApp.hpp
engine/include/: BDDevice.hpp  BDWindow.hpp
engine/shader/: default-shader.frag  default-shader.vert  default.frag  default.vert
engine/src/: BDDevice.cpp  BDWindow.cpp
test/: CMakeLists.txt
test/class/: app.hpp
test/src/: app.cpp  main.cpp
